# next-prayer

./: .clang-format  .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CODE-OF-CONDUCT.md  CPPLINT.cfg  Dockerfile  FetchNextDay  FetchWholeYear.py  FindNextPrayer  FindNextPrayer.REMOVED.git-id  FindNextPrayer.cpp  Makefile  NextPrayer  NextPrayerDaemon  PKGBUILD  README.md  RELEASE_NOTES  cid.sh  config.json  config.mk  config.py  events.cpp  ex.json  fetch.py  init.json  install  lapi.cpp  local_api.cpp  next-prayer  next-prayer.1  np_fetch.py  np_main.cpp  nxprayer  nxprayer.1  nxprayer.png.REMOVED.git-id  rapi.py  remote_api.py  (+1 more)
.github/: dependabot.yml
.github/workflows/: docker_deploy.yml  giga-linter.yaml  verification.yml  verify_installation.yaml
assets/: usage.GIF.REMOVED.git-id
cmake/: CPM.cmake  tools.cmake
include/: config.h  constants.h  http.h  next_prayer.h
source/: next_prayer.cpp
src/: next-prayer  next-prayer.1  np_config.py  np_fetch.py  np_main.cpp
test/: data.txt
